# Vellum

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  eslint.config.mjs  firmware-signing.pub  next.config.ts  package-lock.json  package.json  vitest.config.ts
firmware/: Makefile  (+6 more)
firmware-d1001/components/esp32_p4_re_terminal_d1001/: CMakeLists.txt  Kconfig  idf_component.yml
firmware-d1001/components/esp32_p4_re_terminal_d1001/include/: bsp_lsm6ds3.h  bsp_pcf8563.h  esp-bsp.h  esp32_p4_re_terminal_d1001.h
firmware-d1001/components/esp32_p4_re_terminal_d1001/src/: bsp_lsm6ds3.c  bsp_pcf8563.c  esp32_p4_re_terminal_d1001.c
firmware-d1001/examples/factory_firmware/components/apps/: CMakeLists.txt  apps.h
firmware-d1001/examples/factory_firmware/components/apps/camera/: Camera.cpp  app_camera_pipeline.hpp
firmware-d1001/examples/factory_firmware/components/apps/game_2048/: Game_2048.cpp
firmware-d1001/examples/factory_firmware/components/apps/image_display/: ImageDisplay.cpp
firmware-d1001/examples/factory_firmware/components/apps/lcd_test/: LcdTest.cpp  LcdTest.hpp
firmware-d1001/examples/factory_firmware/components/apps/lcd_test/assets/: img_app_rgb.c
firmware-d1001/examples/factory_firmware/components/apps/music_player/: MusicPlayer.cpp
firmware-d1001/examples/factory_firmware/components/apps/power_off/: PowerOff.cpp  PowerOff.hpp
firmware-d1001/examples/factory_firmware/components/apps/power_off/assets/: img_app_power.c
firmware-d1001/examples/factory_firmware/components/apps/recorder/: Recorder.cpp  Recorder.hpp
firmware-d1001/examples/factory_firmware/components/apps/recorder/assets/: img_app_recorder.c
firmware-d1001/examples/factory_firmware/components/apps/sensor/: Sensor.cpp  Sensor.hpp
firmware-d1001/examples/factory_firmware/components/apps/sensor/assets/: img_app_red_dot.c  img_app_sensor.c
firmware-d1001/examples/factory_firmware/components/apps/setting/: Setting.cpp  Setting.hpp  app_sntp.c
firmware-d1001/examples/factory_firmware/components/apps/setting/ui/: CMakeLists.txt  filelist.txt  ui.h
firmware-d1001/examples/factory_firmware/components/apps/touch_test/: TouchTest.cpp  TouchTest.hpp
firmware-d1001/examples/factory_firmware/components/apps/touch_test/assets/: img_app_touch.c
firmware-d1001/examples/factory_firmware/components/apps/video_player/: VideoPlayer.cpp
firmware/components/epaper_uc8179/: .gitignore  ADDING_PANELS.md  CMakeLists.txt  README.md  idf_component.yml
firmware/components/epaper_uc8179/examples/esp32_wroom_4color/main/: CMakeLists.txt
firmware/components/epaper_uc8179/examples/esp32_wroom_generic/: CMakeLists.txt  sdkconfig.defaults
firmware/components/epaper_uc8179/examples/esp32_wroom_generic/main/: CMakeLists.txt  lv_conf.h
firmware/components/epaper_uc8179/examples/esp32s3_epaper_154/: README.md
firmware/components/epaper_uc8179/examples/esp32s3_epaper_154/main/: app_main.c
firmware/components/epaper_uc8179/examples/esp32s3_photopainter/main/: app_main.c  idf_component.yml
firmware/components/epaper_uc8179/include/: epaper.h  epaper_config.h
firmware/components/epaper_uc8179/src/: epaper.c  epaper_registry.c  epaper_spi.c
firmware/components/epaper_uc8179/src/controllers/: acep_6color.c  ssd16xx.c  uc8179_bw.c
firmware/components/vellum_display/: CMakeLists.txt  idf_component.yml  vellum_display.c
firmware/components/vellum_display/drivers/: driver_e1001.c  driver_e1002.c  driver_e1003.c  driver_stub.c
firmware/components/vellum_display/include/: display_driver.h  fallback_icons.h  vellum_display.h  vellum_logo.h  vellum_logo_img.h
firmware/components/vellum_display/logos/: vellum_logo_16grey_300px.c  vellum_logo_16grey_600px.c  vellum_logo_color_300px.c  vellum_logo_color_600px.c  vellum_logo_mono_300px.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
(+262 files in other folders)
